2007-10-23 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add new devices: ATmega48P/88P/168P/328P.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom168p.h: New file.
	* include/avr/iom328p.h: New file.
	* include/avr/iom48p.h: New file.
	* include/avr/iom88p.h: New file.
	* include/avr/iomx8p.h: New file.
	* NEWS: Add devices to list.

2007-10-23 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix bug #21174: assembly error with targets at90s1200, attiny11,
	attiny12, and attiny28
	* crt1/gcrt1.S: for assembly-only architectures, revert to the
	old behaviour of jumping to main() rather than calling it, and
	jumping to exit() afterwards.

2007-10-23 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix for bug #18964: USART definitions *wrong* in iocanxx.h
	* include/avr/iocanxx.h: Add missing SIG_USART* vector names.

2007-10-23 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Guohui Wang <info@Atmanecl.net>:
	Fix for bug #20843: Mega 2561 library
	* crt0/gcrt0.S: initialize EIND for avr6 architectures to
	the same segment __vectors belongs to.

2007-10-19  Eric B. Weddington  <eweddington@cso.atmel.com>

	* configure.ac: Add new devices: AT90PWM2B, AT90PWM3B.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/io90pwm2b.h: New file.
	* include/avr/io90pwm3b.h: New file.
	* NEWS: Add devices to list.

2007-10-19  Eric B. Weddington  <eweddington@cso.atmel.com>

	Fix for Atmel bug #6346.
	* include/avr/iom8515.h: Add USART* interrupt vector names to
	correctly reflect the device XML file.

2007-10-10  Eric B. Weddington  <eweddington@cso.atmel.com>

	Resolve bug #21299: Duplicate register address in iotn48.h.