@@ -1,3 +1,14 @@
+2007-10-24  Eric B. Weddington  <eweddington@cso.atmel.com>
+
+	Add Lockbits API. Set the lockbits from within the application.
+	* include/avr/Makefile.am: Add new file to distribution.
+	* include/avr/io.h: Include new lock.h file.
+	* include/avr/iom128.h: Add definitions for API.
+	* include/avr/iom48.h: Ditto.
+	* include/avr/iom88.h: Ditto.
+	* include/avr/iom168.h: Ditto.
+	* include/avr/lock.h: New file.
+
 2007-10-23 Anatoly Sokolov <aesok@post.ru>
 
 	* configure.ac: Add new devices: ATmega48P/88P/168P/328P.
